# aerosense-tools

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cp_plots.ipynb  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml  ci.yml  update_pr.yml
aerosense_tools/: exceptions.py  microphone-data-2023-03-15T10:25:00.hdf5  plots.py  postprocess.py  preprocess.py  queries.py  utils.py
aerosense_tools/schema/: coordinates_table.json  imu_coordinates.json  sections.json
docs/: requirements.txt
docs/source/: api.rst  authentication.rst  conf.py  index.rst  installation.rst
tests/: __init__.py  example_installation_metadata.json  test_post_process.py  test_pre_process.py
